--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     restart: always
     container_name: mysql
     volumes:
-      - ./containers/mysql/data:/var/lib/mysql
+      - ./mysql/data:/var/lib/mysql
     ports:
       - "3306:3306"
     environment:
